--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,7 +1,8 @@
 * {
   box-sizing: border-box;
   font-family: Helvetica;
-  color: #424748;
+  color: black;
+  text-decoration: none;
 }
 
 body {
@@ -34,7 +35,7 @@ body > main {
   display: flex;
   flex-direction: column;
   align-items: center;
-  background-color: #E8ECEB;
+  background-image: url("https://images.pexels.com/photos/53594/blue-clouds-day-fluffy-53594.jpeg?cs=srgb&dl=pexels-pixabay-53594.jpg&fm=jpg");
   padding: 20px;
   overflow-y: scroll;
 }
@@ -130,3 +131,66 @@ table td {
   margin-bottom: 2rem;
 }
 
+.flight-table {
+  background-color: lightgray;
+  border-radius: 25px;
+  text-align: center;
+  box-shadow: 10px 5px 5px grey;
+}
+
+.new-flight {
+  background-color: lightgray;
+  border-radius: 25px;
+  text-align: center;
+  box-shadow: 10px 5px 5px grey;
+  padding: 20px;
+}
+
+.flight-detail {
+  background-color: lightgray;
+  border-radius: 25px;
+  text-align: center;
+  box-shadow: 10px 5px 5px grey;
+  padding: 20px;
+}
+
+.destinations {
+  background-color: lightgray;
+  border-radius: 25px;
+  text-align: center;
+  box-shadow: 10px 5px 5px grey;
+  padding: 20px;
+  margin-top: 40px;
+}
+
+.tickets {
+  background-color: lightgray;
+  border-radius: 25px;
+  text-align: center;
+  box-shadow: 10px 5px 5px grey;
+  padding: 20px;
+  margin-top: 40px;
+}
+
+.new-ticket {
+  background-color: lightgray;
+  border-radius: 25px;
+  text-align: center;
+  box-shadow: 10px 5px 5px grey;
+  padding-left: 10px;
+  padding-right: 10px;
+  margin-top: 40px;
+}
+
+.new-ticket:hover {
+  color: white;
+  background-color: #424748;
+}
+
+.ticket {
+  background-color: lightgray;
+  border-radius: 25px;
+  text-align: center;
+  box-shadow: 10px 5px 5px grey;
+  padding: 20px;
+}
