--- a/views/flights/index.ejs
+++ b/views/flights/index.ejs
@@ -10,28 +10,30 @@
   <title>Mongoose Flights</title>
 </head>
 <body>
-  <h1>Flight List</h1>
-  <table>
-    <thead>
-      <tr>
-        <th>Airline</th>
-        <th>Airport</th>
-        <th>Flight Number</th>
-        <th>Departs</th>
-      </tr>
-    </thead>
-    <tbody>
-      <% flights.forEach (function(f) { %>
+  <div class="flight-table">
+    <h1>Flight List</h1>
+    <table>
+      <thead>
         <tr>
-          <td><%= f.airline %></td>
-          <td><%= f.airport %></td>
-          <td><%= f.flightNo %></td>
-          <td><%= f.departs %></td>
-          <td><a href="/flights/<%= f._id %>">DETAILS</a></td>
+          <th>Airline</th>
+          <th>Airport</th>
+          <th>Flight Number</th>
+          <th>Departs</th>
         </tr>
-      <% }) %>
-    </tbody>
-  </table>
+      </thead>
+      <tbody>
+        <% flights.forEach (function(f) { %>
+          <tr>
+            <td><%= f.airline %></td>
+            <td><%= f.airport %></td>
+            <td><%= f.flightNo %></td>
+            <td><%= f.departs %></td>
+            <td><a href="/flights/<%= f._id %>">DETAILS</a></td>
+          </tr>
+        <% }) %>
+      </tbody>
+    </table>
+  </div>
 </body>
 </html>
 
