added OAuth 2.0 as well as login and logout buttons

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -194,3 +194,14 @@ table td {
   box-shadow: 10px 5px 5px grey;
   padding: 20px;
 }
+
+.login {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 34px;
+}
+
+.login img {
+  height: 30px;
+}
